<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_extra_panel"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="?attr/colorPrimaryVariant"
    android:padding="8dp">

    <RelativeLayout
        android:id="@+id/reader_header_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:minHeight="35dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/reader_header_size"
                android:layout_width="wrap_content"
                android:layout_height="32dp"
                android:layout_marginRight="10dp"
                android:fontFamily="@font/raleway_bold"
                android:foreground="@drawable/ripple"
                android:gravity="center"
                android:minWidth="36dp"
                android:text="Size"
                android:textColor="@color/reader_text_highlightcolor"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/reader_header_color"
                android:layout_width="wrap_content"
                android:layout_height="32dp"
                android:layout_marginRight="10dp"
                android:fontFamily="@font/raleway_bold"
                android:foreground="@drawable/ripple"
                android:gravity="center"
                android:minWidth="35dp"
                android:text="Color"
                android:textColor="@color/reader_text_color"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/reader_header_font"
                android:layout_width="wrap_content"
                android:layout_height="32dp"
                android:layout_marginRight="10dp"
                android:fontFamily="@font/raleway_bold"
                android:foreground="@drawable/ripple"
                android:gravity="center"
                android:minWidth="36dp"
                android:text="Font"
                android:textColor="@color/reader_text_color"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/reader_header_alignment"
                android:layout_width="wrap_content"
                android:layout_height="32dp"
                android:layout_marginRight="10dp"
                android:fontFamily="@font/raleway_bold"
                android:foreground="@drawable/ripple"
                android:gravity="center"
                android:minWidth="36dp"
                android:text="@string/reader_alignment"
                android:textColor="@color/reader_text_color"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/reader_header_bg_opacity"
                android:layout_width="wrap_content"
                android:layout_height="32dp"
                android:fontFamily="@font/raleway_bold"
                android:foreground="@drawable/ripple"
                android:gravity="center"
                android:minWidth="36dp"
                android:text="@string/reader_background"
                android:textColor="@color/reader_text_color"
                android:textStyle="bold" />
        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/reader_header_layout"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/reader_textsize_sublayout_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="8dp">

                <TextView
                    android:layout_width="70dp"
                    android:layout_height="30dp"
                    android:layout_marginRight="15dp"
                    android:fontFamily="@font/raleway_bold"
                    android:gravity="center_vertical"
                    android:text="@string/reader_text_size"
                    android:textColor="@color/reader_text_highlightcolor"
                    android:textSize="13sp" />

                <TextView
                    android:id="@+id/readersettings_smaller_text"
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_weight="1"
                    android:background="@drawable/shape_read_font_a1"
                    android:fontFamily="@font/raleway_bold"
                    android:foreground="?attr/selectableItemBackground"
                    android:gravity="center"
                    android:text="A-"
                    android:textColor="@color/reader_text_color"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/readersettings_textSize"
                    android:layout_width="70dp"
                    android:layout_height="30dp"
                    android:fontFamily="@font/raleway_bold"
                    android:gravity="center"
                    android:text="17"
                    android:textColor="@color/reader_text_color"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/readersettings_larger_text"
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_weight="1"
                    android:background="@drawable/shape_read_font_a2"
                    android:fontFamily="@font/raleway_bold"
                    android:foreground="?attr/selectableItemBackground"
                    android:gravity="center"
                    android:text="A+"
                    android:textColor="@color/reader_text_color"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/reader_textcolor_sublayout_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="8dp"
                android:visibility="gone">

                <TextView
                    android:layout_width="70dp"
                    android:layout_height="30dp"
                    android:layout_marginRight="15dp"
                    android:fontFamily="@font/raleway_bold"
                    android:gravity="center_vertical"
                    android:text="@string/reader_theme"
                    android:textColor="@color/reader_text_highlightcolor"
                    android:textSize="13sp" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/readersettings_theme_rv_id"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/reader_textfont_sublayout_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="8dp"
                android:visibility="gone">

                <TextView
                    android:layout_width="70dp"
                    android:layout_height="30dp"
                    android:layout_marginRight="15dp"
                    android:fontFamily="@font/raleway_bold"
                    android:gravity="center_vertical"
                    android:text="@string/reader_font"
                    android:textColor="@color/reader_text_highlightcolor"
                    android:textSize="13sp" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/readersettings_font_rv_id"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/reader_textAlignemnt_sublayout_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="8dp"
                android:visibility="gone">

                <TextView
                    android:layout_width="70dp"
                    android:layout_height="30dp"
                    android:layout_marginRight="15dp"
                    android:fontFamily="@font/raleway_bold"
                    android:gravity="center_vertical"
                    android:text="@string/reader_alignment"
                    android:textColor="@color/reader_text_highlightcolor"
                    android:textSize="13sp" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/reader_textAlignemnt_left_id"
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:layout_marginRight="17dp"
                    android:background="?attr/actionBarItemBackground"
                    android:gravity="center_vertical"
                    app:srcCompat="@drawable/ic_textalign_left" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/reader_textAlignemnt_center_id"
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:layout_marginRight="17dp"
                    android:background="?attr/actionBarItemBackground"
                    android:gravity="center_vertical"
                    app:srcCompat="@drawable/ic_textalign_center" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/reader_textAlignemnt_right_id"
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:layout_marginRight="17dp"
                    android:background="?attr/actionBarItemBackground"
                    android:gravity="center_vertical"
                    app:srcCompat="@drawable/ic_textalign_right" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/reader_textAlignemnt_underline_id"
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:layout_marginEnd="17dp"
                    android:layout_marginRight="17dp"
                    android:background="?attr/actionBarItemBackground"
                    android:gravity="center_vertical"
                    app:srcCompat="@drawable/ic_textalign_underline" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/reader_textAlignemnt_allcaps_id"
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:layout_marginEnd="17dp"
                    android:layout_marginRight="17dp"
                    android:background="?attr/actionBarItemBackground"
                    android:gravity="center_vertical"
                    android:src="@drawable/ic_all_caps" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/reader_bgopacity_sublayout_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="8dp"
                android:visibility="gone">

                <TextView
                    android:layout_width="70dp"
                    android:layout_height="30dp"
                    android:layout_marginRight="15dp"
                    android:fontFamily="@font/raleway_bold"
                    android:gravity="center_vertical"
                    android:text="@string/reader_bg_opacity"
                    android:textColor="@color/reader_text_highlightcolor"
                    android:textSize="13sp" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/reader__bg_opacity_increase_id"
                    android:layout_width="70dp"
                    android:layout_height="28dp"
                    android:layout_marginRight="17dp"
                    android:background="?attr/actionBarItemBackground"
                    android:gravity="center_vertical"
                    app:srcCompat="@drawable/ic_baseline_brightness_low_24" />

                <TextView
                    android:id="@+id/readersettings_opacity_val_text"
                    android:layout_width="70dp"
                    android:layout_height="30dp"
                    android:fontFamily="@font/raleway_bold"
                    android:gravity="center"
                    android:textColor="@color/reader_text_color"
                    android:textSize="14sp" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/reader__bg_opacity_decrease_id"
                    android:layout_width="70dp"
                    android:layout_height="28dp"
                    android:layout_marginRight="17dp"
                    android:background="?attr/actionBarItemBackground"
                    android:gravity="center_vertical"
                    app:srcCompat="@drawable/ic_baseline_brightness_high_24" />
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/reader_close_button"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:background="?attr/actionBarItemBackground"
        android:padding="6dp"
        android:src="@drawable/close" />
</RelativeLayout>